src/stylesheets/components/_activity.scss
// sass-lint:disable no-important

//
// Activity
// --------------------------------------------------

.activity-pane {
  height: 0;
  overflow: hidden;
  transition:
    height
    $activity-transition-duration
    $activity-transition-timing-function;
  font-size: $font-size-small;

  &.busy {
    display: block;
  }
}

@keyframes activity-in {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.activity {
  display: flex;
  align-items: center;
  border-top: 1px solid $activity-border-color;
  padding: 0 $component-padding-horizontal;
  animation: activity-in 0.125s ease both;
  height: $activity-height;

  .activity-container {
    flex: 1 1 0;
    min-width: 0;
  }

  &.progress {
    .flex-row {
      margin-top: -4px;
      margin-bottom: 6px;
    }

    .progress-bar {
      flex: 1 1 auto;
      margin-right: $space-min;
    }

    .btn {
      padding: 0;
      width: 12px;
      height: 12px;
      background: $progress-cancel-bg;
      border-radius: 6px;
      overflow: hidden;
      position: relative;
      opacity: 0.5;

      .icon {
        position: absolute;
        left: 50%;
        top: 50%;
        transform: translate(-50%, -50%);

        svg {
          color: $progress-cancel-color;
        }
      }

      &:hover,
      &:active {
        opacity: 1;
      }

      &:active {
        background: $icon-active-color;

        .icon {
          svg {
            color: $progress-cancel-color;
          }
        }
      }
    }
  }
}

@keyframes spin {
  0% {
    transform: rotate(0);
  }

  100% {
    transform: rotate(360deg);
  }
}

.icon-spin {
  animation: spin 1.2s linear infinite;
}

.progress-in-numbers {
  margin-left: $space-min;

  span + span {
    &::before {
      content: " of ";
      white-space: nowrap;
    }
  }
}

.activity-text {
  @include css-truncation;
}

